modify build scripts and components for asset referencing and update test index

--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,4 +1,4 @@
 <p>Your test string is: <span class="font-weight-bold">{{ test }}</span></p>
-<img src="assets/img/airplane.png" class="img-fluid">
+<img [src]="base + 'assets/img/airplane.png'" class="img-fluid">
 <p>Your json string is: <span class="font-weight-bold">{{ config.test }}</span></p>
 
